# cube-card-tracker

./: .gitignore  GETTING_STARTED.md  Makefile  README.md  bootstrap.sh  dev.sh  pyproject.toml
backend/: cube_tracker.db  pyproject.toml  requirements.txt  wsgi.py
backend/app/: __init__.py  config.py  extensions.py
backend/app/api/: __init__.py  checkin.py  cubes.py  health.py  tournaments.py
backend/app/models/: __init__.py  base.py
backend/app/services/: card_db_service.py  cube_checkin_service.py  detection_service.py  ocr_service.py
config/: config.yaml
docker/: Dockerfile.backend
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.parcel-cache/: 0e60893927c352b7-RequestGraph  22899de899d4c27b-BundleGraph  66aa66a37b47d72e-BundleGraph  7daea178f9b48961-RequestGraph  880d99dfa4847a06-AssetGraph  data.mdb  e1c7b57f833f142e-AssetGraph  e7ea2b0289e73e80-AssetGraph  lock.mdb  snapshot-0e60893927c352b7.txt  snapshot-7daea178f9b48961.txt
frontend/src/: App.tsx  index.html
frontend/src/api/: checkin.ts  client.ts  cubes.ts  tournaments.ts
frontend/src/components/checkin/: CardCanvas.tsx  CardList.tsx  CheckinFlow.tsx  ImageUpload.tsx
frontend/src/pages/: CheckinPage.tsx
frontend/src/types/: Card.ts  Cube.ts  Tournament.ts  index.ts
src/cube_card_tracker/: __init__.py  cli.py  config.py  config_manager.py  recognition.py  tracker.py
tests/: __init__.py  test_config.py
