[tool.poetry]
name = "cube-card-tracker-backend"
version = "0.1.0"
description = "Backend API for the Cube Card Tracker — OCR-based cube check-in system"
authors = ["Cube Card Tracker <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
SQLAlchemy = "^2.0.23"
Flask-SQLAlchemy = "^3.1.1"
Flask-CORS = "^4.0.0"
Flask-Migrate = "^4.0.5"
opencv-python = "^4.8.1"
Pillow = "^10.1.0"
pytesseract = "^0.3.10"
rapidfuzz = "^3.5.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-flask = "^1.3.0"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
dev = "scripts.dev:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]